[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/AddGroup.gd" type="Script" id=2]

[node name="AddGroup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0.027451, 0.572549, 0.596078, 1 )

[node name="AddGroupButton" type="Button" parent="Background"]
margin_left = 450.0
margin_top = 1100.0
margin_right = 650.0
margin_bottom = 1200.0
text = "Utwórz grupę"

[node name="ScrollContainer" type="ScrollContainer" parent="Background"]
margin_left = 18.0
margin_top = 123.0
margin_right = 1061.0
margin_bottom = 1046.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/ScrollContainer"]

[node name="NameLabel" type="Label" parent="Background"]
margin_left = 164.0
margin_top = 35.0
margin_right = 266.0
margin_bottom = 81.0
text = "Nazwa"

[node name="NameInput" type="LineEdit" parent="Background"]
margin_left = 300.0
margin_top = 30.0
margin_right = 1000.0
margin_bottom = 90.0

[node name="BackButton" type="Button" parent="Background"]
margin_left = 450.0
margin_top = 1350.0
margin_right = 662.0
margin_bottom = 1450.0
text = "Powrót"

[node name="Notification" type="Label" parent="Background"]
margin_left = 450.0
margin_top = 1240.0
margin_right = 850.0
margin_bottom = 1300.0

[connection signal="pressed" from="Background/AddGroupButton" to="." method="_on_AddGroupButton_pressed"]
[connection signal="pressed" from="Background/BackButton" to="." method="_on_BackButton_pressed"]
